force-app/main/default/objects/Contact/fields/EmailPref_Vols__c.field-meta.xml
<CustomField>
    <fullName>EmailPref_Vols__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For account engagement preference centre, not to be manually edited.</description>
    <label>EmailPref_Vols</label>
    <type>Checkbox</type>
</CustomField>