force-app/main/default/objects/Contact/fields/EmailPref_Wescarpade__c.field-meta.xml
<CustomField>
    <fullName>EmailPref_Wescarpade__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EmailPref_Wescarpade</label>
    <type>Checkbox</type>
</CustomField>