force-app/main/default/objects/Contact/fields/Emergency_Contact_Comments__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Contact_Comments__c</fullName>
    <label>Emergency Contact Comments</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>