force-app/main/default/objects/Contact/fields/Employeer__c.field-meta.xml
<CustomField>
    <fullName>Employeer__c</fullName>
    <label>Employeer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>