force-app/main/default/objects/Contact/fields/Escarpade_email_pref__c.field-meta.xml
<CustomField>
    <fullName>Escarpade_email_pref__c</fullName>
    <label>Escarpade_emailpref</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Opted Out</fullName>
            </value>
            <value>
                <fullName>Opted In</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>