force-app/main/default/objects/Contact/fields/Exclude_From_Portal__c.field-meta.xml
<CustomField>
    <fullName>Exclude_From_Portal__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Exclude From Portal</label>
    <type>Checkbox</type>
</CustomField>