force-app/main/default/objects/Contact/fields/Expected_Return_to_School_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Return_to_School_Date__c</fullName>
    <inlineHelpText>(If not returned to school already)</inlineHelpText>
    <label>Expected Return to School Date</label>
    <type>Date</type>
</CustomField>