force-app/main/default/objects/Contact/fields/External_ID__c.field-meta.xml
<CustomField>
    <fullName>External_ID__c</fullName>
    <description>Creates ID based on firstname+lastname+personal email to be used for matching ie Zapier webhook</description>
    <formula>FirstName+ LastName +  Email</formula>
    <label>External ID</label>
    <type>Text</type>
</CustomField>