force-app/main/default/objects/Contact/fields/F2F_Clawback_Claimed__c.field-meta.xml
<CustomField>
    <fullName>F2F_Clawback_Claimed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>F2F Clawback Claimed</label>
    <type>Checkbox</type>
</CustomField>