force-app/main/default/objects/Contact/fields/Families_EmailPref__c.field-meta.xml
<CustomField>
    <fullName>Families_EmailPref__c</fullName>
    <description>Family/Program related email preferences</description>
    <label>Families_EmailPref</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Email_Preference_Centre</valueSetName>
    </valueSet>
</CustomField>