force-app/main/default/objects/Contact/fields/Family_Member_Sum__c.field-meta.xml
<CustomField>
    <fullName>Family_Member_Sum__c</fullName>
    <formula>if (Text(Account.Family_Type__c) = &apos;&apos;, &apos;&apos;, if(  npsp__Deceased__c , &apos;Deceased Family Member&apos;,
Text(Account.Family_Type__c) &amp; &apos; - &apos; &amp;  Text(Family_Member_Type__c) ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Family Member Sum</label>
    <type>Text</type>
</CustomField>