force-app/main/default/objects/Contact/fields/Family_Member_Type__c.field-meta.xml
<CustomField>
    <fullName>Family_Member_Type__c</fullName>
    <label>Family Member Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Aunt</fullName>
            </value>
            <value>
                <fullName>Deceased Parent</fullName>
            </value>
            <value>
                <fullName>Father</fullName>
            </value>
            <value>
                <fullName>Grandparent</fullName>
            </value>
            <value>
                <fullName>Hospital</fullName>
            </value>
            <value>
                <fullName>Legal Guardian</fullName>
            </value>
            <value>
                <fullName>Mother</fullName>
            </value>
            <value>
                <fullName>Patient</fullName>
            </value>
            <value>
                <fullName>School</fullName>
            </value>
            <value>
                <fullName>Sibling</fullName>
            </value>
            <value>
                <fullName>Stepfather</fullName>
            </value>
            <value>
                <fullName>Stepmother</fullName>
            </value>
            <value>
                <fullName>Stepsibling</fullName>
            </value>
            <value>
                <fullName>Uncle</fullName>
            </value>
            <value>
                <fullName>Cousin</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>