force-app/main/default/objects/Contact/fields/FamilyMemberStatus__c.field-meta.xml
<CustomField>
    <fullName>FamilyMemberStatus__c</fullName>
    <formula>IF( npsp__Deceased__c   = True , &quot;Deceased&quot;, 
IF (  ISBLANK(  Year_Age__c ),   if(ISPICKVAL(Is_Patient__c, &quot;Yes&quot;) ,&quot;Adult Patient&quot;, &quot;Adult&quot;), 

if (AND(Year_Age__c &lt; 14, Added_After_Registration__c = False),&quot;Eligible Child&quot;, 
if (Year_Age__c &gt; 18, if(ISPICKVAL(Is_Patient__c, &quot;Yes&quot;) ,&quot;Adult Patient&quot;, &quot;Adult&quot;), &quot;Child&quot;))))</formula>
    <label>Family Member Status</label>
    <type>Text</type>
</CustomField>