force-app/main/default/objects/Contact/fields/Former_Family__c.field-meta.xml
<CustomField>
    <fullName>Former_Family__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Former Family</label>
    <type>Checkbox</type>
</CustomField>