force-app/main/default/objects/Contact/fields/Former_Family_Date__c.field-meta.xml
<CustomField>
    <fullName>Former_Family_Date__c</fullName>
    <label>Former Family Date</label>
    <type>Date</type>
</CustomField>