force-app/main/default/objects/Contact/fields/Former_Family_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Former_Family_Start_Date__c</fullName>
    <label>Former Family Start Date</label>
    <type>Date</type>
</CustomField>