force-app/main/default/objects/Contact/fields/Former_Family_Type__c.field-meta.xml
<CustomField>
    <fullName>Former_Family_Type__c</fullName>
    <label>Former Family Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>