force-app/main/default/objects/Contact/fields/Former_Name__c.field-meta.xml
<CustomField>
    <fullName>Former_Name__c</fullName>
    <label>Former Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>