force-app/main/default/objects/Contact/fields/Fundraiser_ID__c.field-meta.xml
<CustomField>
    <fullName>Fundraiser_ID__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Fundraising.CampQuality.org.au ID</inlineHelpText>
    <label>Fundraiser ID CQ</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>