force-app/main/default/objects/Contact/fields/Fundraising_Appeals_EmailPref__c.field-meta.xml
<CustomField>
    <fullName>Fundraising_Appeals_EmailPref__c</fullName>
    <description>Fundraising/Donor based appeals email preferences</description>
    <label>Fundraising_Appeals_EmailPref</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Email_Preference_Centre</valueSetName>
    </valueSet>
</CustomField>