force-app/main/default/objects/Contact/fields/Funraisin_ID__c.field-meta.xml
<CustomField>
    <fullName>Funraisin_ID__c</fullName>
    <label>Funraisin ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>