force-app/main/default/objects/Contact/fields/Funx4_EmailPref__c.field-meta.xml
<CustomField>
    <fullName>Funx4_EmailPref__c</fullName>
    <description>Funx4 East Coast Email Preferences</description>
    <label>Funx4_EmailPref</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Email_Preference_Centre</valueSetName>
    </valueSet>
</CustomField>