force-app/main/default/objects/Contact/fields/Graduating_From_Camp__c.field-meta.xml
<CustomField>
    <fullName>Graduating_From_Camp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Graduating From Camp</label>
    <type>Checkbox</type>
</CustomField>