force-app/main/default/objects/Contact/fields/HH_Landscape_Group__c.field-meta.xml
<CustomField>
    <fullName>HH_Landscape_Group__c</fullName>
    <description>DCA Enrichment</description>
    <inlineHelpText>Household Landscape Group</inlineHelpText>
    <label>HH Landscape Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Blue Collar Families</fullName>
            </value>
            <value>
                <fullName>Comfortable Seniors</fullName>
            </value>
            <value>
                <fullName>Country Battlers</fullName>
            </value>
            <value>
                <fullName>Inner-City Professionals</fullName>
            </value>
            <value>
                <fullName>New Arrivals</fullName>
            </value>
            <value>
                <fullName>Regional Centres</fullName>
            </value>
            <value>
                <fullName>Rural Heartland</fullName>
            </value>
            <value>
                <fullName>Small Town and Beyond</fullName>
            </value>
            <value>
                <fullName>Suburban Families</fullName>
            </value>
            <value>
                <fullName>Success Stories</fullName>
            </value>
            <value>
                <fullName>Urban Survivors</fullName>
            </value>
            <value>
                <fullName>Young Communities</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>