force-app/main/default/objects/Contact/fields/HH_Landscape_Segment__c.field-meta.xml
<CustomField>
    <fullName>HH_Landscape_Segment__c</fullName>
    <description>DCA Enrichment</description>
    <label>HH Landscape Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ambitious New Arrivals</fullName>
            </value>
            <value>
                <fullName>Aspiring Executives</fullName>
            </value>
            <value>
                <fullName>Blue Collar Labourers</fullName>
            </value>
            <value>
                <fullName>Blue Collar Rural Families</fullName>
            </value>
            <value>
                <fullName>Blue Collar Seniors</fullName>
            </value>
            <value>
                <fullName>City Fringe Survivors</fullName>
            </value>
            <value>
                <fullName>Comfortable Families</fullName>
            </value>
            <value>
                <fullName>Comfortable Older Couples</fullName>
            </value>
            <value>
                <fullName>Comfortable Suburban Labourers</fullName>
            </value>
            <value>
                <fullName>Comfortable Urban Living</fullName>
            </value>
            <value>
                <fullName>Content Small Town Seniors</fullName>
            </value>
            <value>
                <fullName>Driven Young Professionals</fullName>
            </value>
            <value>
                <fullName>Extended Families</fullName>
            </value>
            <value>
                <fullName>Farming Families</fullName>
            </value>
            <value>
                <fullName>Flying Solo Seniors</fullName>
            </value>
            <value>
                <fullName>Fresh Start Families</fullName>
            </value>
            <value>
                <fullName>Frugal Farmers</fullName>
            </value>
            <value>
                <fullName>High-spending Young Families</fullName>
            </value>
            <value>
                <fullName>Lonely Seniors</fullName>
            </value>
            <value>
                <fullName>Lonely Strugglers</fullName>
            </value>
            <value>
                <fullName>Mining Workers</fullName>
            </value>
            <value>
                <fullName>Part-time Professionals</fullName>
            </value>
            <value>
                <fullName>Professional families</fullName>
            </value>
            <value>
                <fullName>Regional Professionals</fullName>
            </value>
            <value>
                <fullName>Rural Seniors</fullName>
            </value>
            <value>
                <fullName>Sensible Small Town</fullName>
            </value>
            <value>
                <fullName>Sophisticated Urban Living</fullName>
            </value>
            <value>
                <fullName>Struggling Migrants</fullName>
            </value>
            <value>
                <fullName>Suburban Renewal</fullName>
            </value>
            <value>
                <fullName>Successful Executives</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>