force-app/main/default/objects/Contact/fields/Highest_School_Year__c.field-meta.xml
<CustomField>
    <fullName>Highest_School_Year__c</fullName>
    <label>Highest School Year</label>
    <length>255</length>
    <type>Text</type>
</CustomField>