force-app/main/default/objects/Contact/fields/Home_Phone_Report__c.field-meta.xml
<CustomField>
    <fullName>Home_Phone_Report__c</fullName>
    <formula>HomePhone</formula>
    <inlineHelpText>Home phone not available on all reports, this is added in to get that field in those reports (Campaigns with Contacts)</inlineHelpText>
    <label>Home Phone (Report)</label>
    <type>Text</type>
</CustomField>