force-app/main/default/objects/Contact/fields/Household_Composition__c.field-meta.xml
<CustomField>
    <fullName>Household_Composition__c</fullName>
    <description>DCA Enrichment</description>
    <label>Household Composition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Couple</fullName>
            </value>
            <value>
                <fullName>Couple - Other</fullName>
            </value>
            <value>
                <fullName>Group - Females</fullName>
            </value>
            <value>
                <fullName>Group - Males</fullName>
            </value>
            <value>
                <fullName>Group - Mixed</fullName>
            </value>
            <value>
                <fullName>Single - Female</fullName>
            </value>
            <value>
                <fullName>Single - Male</fullName>
            </value>
            <value>
                <fullName>Single - Unknown Gender</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>