force-app/main/default/objects/Contact/fields/Household_Disposable_Income__c.field-meta.xml
<CustomField>
    <fullName>Household_Disposable_Income__c</fullName>
    <description>DCA Enrichment</description>
    <label>Household Disposable Income</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Band 1 - Low</fullName>
            </value>
            <value>
                <fullName>Band 2</fullName>
            </value>
            <value>
                <fullName>Band 3</fullName>
            </value>
            <value>
                <fullName>Band 4</fullName>
            </value>
            <value>
                <fullName>Band 5</fullName>
            </value>
            <value>
                <fullName>Band 6</fullName>
            </value>
            <value>
                <fullName>Band 7</fullName>
            </value>
            <value>
                <fullName>Band 8</fullName>
            </value>
            <value>
                <fullName>Band 9</fullName>
            </value>
            <value>
                <fullName>Band 10 - High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>