force-app/main/default/objects/Contact/fields/Household_Income__c.field-meta.xml
<CustomField>
    <fullName>Household_Income__c</fullName>
    <description>DCA Enrichment</description>
    <label>Household Income</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Negative or Nil</fullName>
            </value>
            <value>
                <fullName>$1 to $199 / $1 to $10,349</fullName>
            </value>
            <value>
                <fullName>$200 to $299 / $10,400 to $15,549</fullName>
            </value>
            <value>
                <fullName>$300 to $399 / $15,600 to $20,749</fullName>
            </value>
            <value>
                <fullName>$400 to $599 / $20,800 to $31,149</fullName>
            </value>
            <value>
                <fullName>$600 to $799 / $31,200 to $41,549</fullName>
            </value>
            <value>
                <fullName>$800 to $999 / $41,600 to $51,949</fullName>
            </value>
            <value>
                <fullName>$1,000 to $1,249 / $52,000 to $64,949</fullName>
            </value>
            <value>
                <fullName>$1,250 to $1,499 / $65,000 to $77,949</fullName>
            </value>
            <value>
                <fullName>$1,500 to $1,999 / $78,000 to $103,949</fullName>
            </value>
            <value>
                <fullName>$2,000 to $2,499 / $104,000 to $129,949</fullName>
            </value>
            <value>
                <fullName>$2,500 to $2,999 / $130,000 to $155,949</fullName>
            </value>
            <value>
                <fullName>$3,000 to $3,499 / $156,000 to $181,949</fullName>
            </value>
            <value>
                <fullName>$3,500 to $3,999 / $182,000 to $207,949</fullName>
            </value>
            <value>
                <fullName>$4,000 and over / $208,000 and over</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>