force-app/main/default/objects/Contact/fields/Ignore_Validation__c.field-meta.xml
<CustomField>
    <fullName>Ignore_Validation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to ignore validation rules for apex classes</description>
    <label>Ignore Validation</label>
    <type>Checkbox</type>
</CustomField>