force-app/main/default/objects/Contact/fields/Image_Opt_In_Participant_Sharing__c.field-meta.xml
<CustomField>
    <fullName>Image_Opt_In_Participant_Sharing__c</fullName>
    <description>Formuala Field which simply takes the value of the Image permission field from the related account object</description>
    <formula>Account.media_opt_in_share_participants__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Image Opt-In Participant Sharing</label>
    <type>Checkbox</type>
</CustomField>