force-app/main/default/objects/Contact/fields/Image_Opt_In_Permission_Public__c.field-meta.xml
<CustomField>
    <fullName>Image_Opt_In_Permission_Public__c</fullName>
    <description>Formuala Field which simply takes the value of the Image permission field from the related account object</description>
    <formula>Account.Media_permission_Public_2019__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Image Opt-In Permission Public</label>
    <type>Checkbox</type>
</CustomField>