force-app/main/default/objects/Contact/fields/Image_Opt_In_photos_and_video__c.field-meta.xml
<CustomField>
    <fullName>Image_Opt_In_photos_and_video__c</fullName>
    <formula>Account.media_opt_in_take_video_photos__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Image Opt-In photos and video</label>
    <type>Checkbox</type>
</CustomField>