force-app/main/default/objects/Contact/fields/Included_in_Initial_Registration__c.field-meta.xml
<CustomField>
    <fullName>Included_in_Initial_Registration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Included in Initial Registration</label>
    <type>Checkbox</type>
</CustomField>