force-app/main/default/objects/Contact/fields/Is_Patient__c.field-meta.xml
<CustomField>
    <fullName>Is_Patient__c</fullName>
    <label>Is Patient</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>