force-app/main/default/objects/Contact/fields/Kids_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Kids_Agreement__c</fullName>
    <label>Kids Agreement</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Middle Camp</fullName>
            </value>
            <value>
                <fullName>Mini Camp</fullName>
            </value>
            <value>
                <fullName>Junior Camp</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>