force-app/main/default/objects/Contact/fields/Leaving_Camp_Quality_Reason__c.field-meta.xml
<CustomField>
    <fullName>Leaving_Camp_Quality_Reason__c</fullName>
    <label>Leaving Camp Quality Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cannot Contact</fullName>
            </value>
            <value>
                <fullName>Volunteer Choice</fullName>
            </value>
            <value>
                <fullName>Not Compliant</fullName>
            </value>
            <value>
                <fullName>Camp Quality Choice</fullName>
            </value>
            <value>
                <fullName>Bereaved</fullName>
            </value>
            <value>
                <fullName>Disengaged</fullName>
            </value>
            <value>
                <fullName>Health Limitations</fullName>
            </value>
            <value>
                <fullName>Left Country</fullName>
                <isActive>false</isActive>
                <label>Left Country</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>