force-app/main/default/objects/Contact/fields/LFY_Amount__c.field-meta.xml
<CustomField>
    <fullName>LFY_Amount__c</fullName>
    <description>Recurring Donations for the Last Financial Year</description>
    <inlineHelpText>2021/2022 FY Amount</inlineHelpText>
    <label>LFY Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>