force-app/main/default/objects/Contact/fields/LFY_RG_Donation_Amount__c.field-meta.xml
<CustomField>
    <fullName>LFY_RG_Donation_Amount__c</fullName>
    <description>Total Amount of Recurring Donations over the last fiscal year</description>
    <inlineHelpText>Total Amount of Recurring Donations over the last fiscal year - Need to run manually</inlineHelpText>
    <label>LFY RG Donation Amount</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>