force-app/main/default/objects/Contact/fields/LIC_Total__c.field-meta.xml
<CustomField>
    <fullName>LIC_Total__c</fullName>
    <formula>VALUE(LEFT(TEXT( Linkage_Rating__c ), 1)) + 
VALUE(LEFT(TEXT( Interest_Rating__c ), 1)) + 
VALUE(LEFT(TEXT( Capacity_Rating__c ), 1))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LIC Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>