force-app/main/default/objects/Contact/fields/Litmos_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Litmos_Account_ID__c</fullName>
    <inlineHelpText>To store related Litmos Account Id for volunteers</inlineHelpText>
    <label>Litmos Account ID</label>
    <length>24</length>
    <type>Text</type>
</CustomField>