force-app/main/default/objects/Contact/fields/MarketingProfileTest__c.field-meta.xml
<CustomField>
    <fullName>MarketingProfileTest__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MarketingProfileTest</label>
    <referenceTo>MarketingProfileTest__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contact</relationshipName>
    <type>Lookup</type>
</CustomField>