force-app/main/default/objects/Contact/fields/MB_Landscape_Group__c.field-meta.xml
<CustomField>
    <fullName>MB_Landscape_Group__c</fullName>
    <description>DCA Enrichment</description>
    <inlineHelpText>Mesh Blocks (MB) -  Landscape Groupings
Most Mesh Blocks contain 30 to 60 dwellings.</inlineHelpText>
    <label>MB Landscape Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Blue Collar Families</fullName>
            </value>
            <value>
                <fullName>City Seniors</fullName>
            </value>
            <value>
                <fullName>Farming Heartland</fullName>
            </value>
            <value>
                <fullName>Inner City Professionals</fullName>
            </value>
            <value>
                <fullName>New Arrivals</fullName>
            </value>
            <value>
                <fullName>Regional Centres</fullName>
            </value>
            <value>
                <fullName>Small Towns &amp; Beyond</fullName>
            </value>
            <value>
                <fullName>Student Communities</fullName>
            </value>
            <value>
                <fullName>Suburban Families</fullName>
            </value>
            <value>
                <fullName>Success Stories</fullName>
            </value>
            <value>
                <fullName>Unknown - Commercial Address</fullName>
            </value>
            <value>
                <fullName>Urban Change</fullName>
            </value>
            <value>
                <fullName>Urban Survivors</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>