force-app/main/default/objects/Contact/fields/MB_Landscape_Segment__c.field-meta.xml
<CustomField>
    <fullName>MB_Landscape_Segment__c</fullName>
    <description>DCA Enrichment</description>
    <label>MB Landscape Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active and Affluent</fullName>
            </value>
            <value>
                <fullName>Ambitious New Arrivals</fullName>
            </value>
            <value>
                <fullName>Blue Collar Towns</fullName>
            </value>
            <value>
                <fullName>City Fringe Survivors</fullName>
            </value>
            <value>
                <fullName>Comfortable Suburban Families</fullName>
            </value>
            <value>
                <fullName>Comfortable Suburban Labourers</fullName>
            </value>
            <value>
                <fullName>Country Comfort</fullName>
            </value>
            <value>
                <fullName>Country Communities</fullName>
            </value>
            <value>
                <fullName>Country Nostalgia</fullName>
            </value>
            <value>
                <fullName>Cruisy Beach Lovers</fullName>
            </value>
            <value>
                <fullName>Cultured Suburban Retirees</fullName>
            </value>
            <value>
                <fullName>Disconnected Country Battler</fullName>
            </value>
            <value>
                <fullName>Driven Young Professionals</fullName>
            </value>
            <value>
                <fullName>Empty Nest Executives</fullName>
            </value>
            <value>
                <fullName>Farming Families</fullName>
            </value>
            <value>
                <fullName>Fresh Start Families</fullName>
            </value>
            <value>
                <fullName>Mature Migrant Families</fullName>
            </value>
            <value>
                <fullName>Mining Communities</fullName>
            </value>
            <value>
                <fullName>Multi-generational Migrants</fullName>
            </value>
            <value>
                <fullName>Prosperous Blue Collar</fullName>
            </value>
            <value>
                <fullName>Quarter Acre Families</fullName>
            </value>
            <value>
                <fullName>Regional Enterprise</fullName>
            </value>
            <value>
                <fullName>Regional Labourers</fullName>
            </value>
            <value>
                <fullName>Satellite Education Hubs</fullName>
            </value>
            <value>
                <fullName>Sensible Small Towns</fullName>
            </value>
            <value>
                <fullName>Sensible Suburbanites</fullName>
            </value>
            <value>
                <fullName>Small Town Seniors</fullName>
            </value>
            <value>
                <fullName>Sophisticated Urban Living</fullName>
            </value>
            <value>
                <fullName>Stable City Fringe</fullName>
            </value>
            <value>
                <fullName>Struggling Young Migrants</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>