force-app/main/default/objects/Contact/fields/media_opt_in_share_participants__c.field-meta.xml
<CustomField>
    <fullName>media_opt_in_share_participants__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>I allow photos/video to be shared with participants from Camp Quality services and programs via a password protected photo gallery</inlineHelpText>
    <label>Image Opt-in Participant Sharing</label>
    <type>Checkbox</type>
</CustomField>