force-app/main/default/objects/Contact/fields/media_opt_in_take_video_photos__c.field-meta.xml
<CustomField>
    <fullName>media_opt_in_take_video_photos__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>I approve of photos and video footage being taken of me whilst attending Camp Quality services and programs</inlineHelpText>
    <label>Image Opt-In photos and video</label>
    <type>Checkbox</type>
</CustomField>